Fix home screen layout issues

--- a/web-app/client/components/Layout/Layout.module.scss
+++ b/web-app/client/components/Layout/Layout.module.scss
@@ -1,6 +1,7 @@
 @import "styles/common";
 
 .content {
-  padding: 86px 0 0;
+  position: relative;
   min-height: 100vh;
+  padding: 86px 0 0;
 }
